# telemetry-ingestion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.Docker.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: README  env.py
alembic/versions/2026/03/: 04_0104_12b375124112_add_schema_raw_.py  04_0119_23d231f6f782_add_retrieved_at_.py  19_0228_9c1779c58c8e_ref_update_.py  19_0310_da22c7d80dc8_ref_rename_id_.py  20_0420_15c4edd02068_add_enums_to_.py
api/: config.py  database.py  depends.py  exc.py  logger.py  logger.yaml  main.py  models.py  path_query.py  routes.py  schemas.py  security.py  services.py
db/dba/: 00_init_db.sql  01_roles.sql
requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt
test/: README.md  conftest.py  pytest.ini
test/e2e/: conftest.py  test_crud_operations.py  test_error_scenarios.py  test_health_endpoint.py  test_pagination.py
test/fixtures/: api_client.py  database.py  event_data.py
test/utils/: helpers.py
