[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-events"
requires-python = ">=3.10"
dynamic = ["version", "readme"]
description = "Clean, production-ready event driven telemetry ingestion service and persist them for analytics retrieval"
authors = [{ name = "Julio Quintero", email = "jequinterope@unal.edu.co" }]
license = { file = "LICENSE" }

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
implicit_optional = true
install_types = true
incremental = true
cache_dir = ".cache/mypy"
sqlite_cache = true

[tool.ruff]
# Tell to ruff if fix the violations
fix = true
# Cache dir for ruff
cache-dir = "./.cache/ruff"
line-length = 100
# Tells ruff to ignore the same files and dirs in .gitignore
respect-gitignore = true
# Tells ruff to show the fixes
show-fixes = true
# Files to include in ruff checks
src = ["api"]
# Number of spaced to use for indentation
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
# List of rules to enable
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.flake8-annotations]
# Suppress explicitly return None
suppress-none-returning = true
# Suppress dynamically typed function arguments *argc and **kwargs
allow-star-arg-any = true

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true
# Exempt classes to be moved to type-checking block
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
# Exempt functions decorators to be moved to type-checking block
runtime-evaluated-decorators = ["pydantic.*", "fastapi.FasAPI.*"]
# Enforce TC001, TC002, and TC003
strict = true

[tool.ruff.lint.isort]
# Case sensitive imports
case-sensitive = true
# Split into sections the imports
no-sections = false

[tool.ruff.lint.pep8-naming]
# Decorators that should be treated as class methods
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
]
# Ignore pep naming methods
extend-ignore-names = ["test_*", "*_test"]

[tool.ruff.lint.pycodestyle]
# Set the maximum line length for to allow line-too-long violations
max-line-length = 120

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.setuptools.dynamic]
version = { attr = "api.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = ["."]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
timezone = "UTC"

# max length of characters to apply to the "slug" field
truncate_slug_length = 50

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions/simple",
#    "%(here)s/alembic/versions/timescale"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
output_encoding = "utf-8"


[[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME --unsafe-fixes"
